--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
+    "require": {
+        "php": ">=7.4",
+        "guzzlehttp/guzzle": "^7.0"
+    },
+
     "autoload": {
         "psr-4": {
             "App\\": "src/"
